move slots to top. fix layout issues

--- a/css/plae-chef.css
+++ b/css/plae-chef.css
@@ -106,7 +106,7 @@ md-button{
 
 #plae-size {
     height: 472px;
-    margin-top: 50px;
+    margin-top: 20px;
     padding-top: 20px;
     left: 208px;
     z-index: 0;
@@ -165,7 +165,7 @@ md-checkbox#wide-fit-button {
 
     #plae-basket {
         height: 480px;
-        margin-top: 45px;
+        margin-top: 20px;
         left: 1044px;
         z-index: 0;
         width: 220px;
@@ -329,7 +329,7 @@ button#edit {
       opacity: 1;
       display: inline-block;
       margin-bottom: 10px;
-      margin-left: 208px;
+      margin-left: 263px;
         top: 470px;
         border-radius: 5px;
         -webkit-border-radius: 5px;
@@ -353,7 +353,7 @@ button#edit {
     }
 
     canvas#plae-chef-canvas-tab-top {
-        z-index: 31;
+        z-index: 30;
     }
     /*
     .canvas.container {
@@ -376,7 +376,7 @@ button#edit {
         opacity: 1;
         display: inline-block;
         margin-bottom: 10px;
-        margin-left: 208px;
+        margin-left: 263px;
         top: 468px;
         background: #ffffff;
 /*        box-shadow:inset 0 1px 0 rgba(255,255,255,.6), 0 22px 70px 4px rgba(0,0,0,0.56), 0 0 0 1px rgba(0, 0, 0, 0.3);
